2000-09-09  Christopher St. John <cstjohn@acm.org>

	* vrml97parser.g fixed the intValue production. It was not
	correctly parsing hex values starting with "0x". Generally not a
	good idea to use iostreams as a lexer, its too error prone. Also
	fixed the sfImageValue production, it was not correctly unpacking
	longs into the byte array that a pixel texture expects. 

	* VrmlField.cpp fixed VrmlSFImage constructors to take the "num
	components" specification into account when computing the length
	of the image byte array, to go with the parser fix above. Taken
	together, these changes appear to fix bug # 109949.

	* VrmlSFImage.h added javadoc style comments detailing the way
	nComponents interacts with how the image byte array is
	interpreted.

	* VrmlNodePixelTexture.cpp commented out some debug messages.

2000-09-05  Christopher St. John <cstjohn@acm.org>

	* gifread.cpp, jpgread.cpp, mpgread.cpp, pngread.cpp Modified to
	load textures using OpenGL convention of origin in lower left hand
	corner instead of upper left. Old image loader code used regular
	convention and then munged the texture coordinates to turn them
	back right side up, which led to non-conformant behavior when
	scaling using a texture transform node. (see bug# 109952) The
	fixes were easy, but what about 3rd party loaders?

	* ViewerOpenGL.cpp, Viewer.cpp Changed the texture coordinate
	generation code to match the new loader code. Fixes also improve
	(but maybe don't totally fix) several other texture coord problems
	including bug #'s 110035, 111335, 111343.
	
2000-08-27  Christopher St. John <cstjohn@acm.org>

	* ViewerOpenGL.cpp Changed the default zfar in setViewpoint()
	from 1000 to 30,000. This helps with, but doesn't really properly
	fix, conformance bugs #'s 111350, 111338, 111339, 111340. It might
	also cause problems with z-precision, likely to show up as
	z-fighting, but it seems worth a shot.

2000-08-19  Christopher St. John <cstjohn@acm.org>
