@@ -12,6 +12,8 @@ Contributors:
     Edward A Carter <ecarter@U.Arizona.EDU>
     Larry D'Cunha <lpdcunha@golden.net>
     Anton Eliens <eliens@computer.org>
+    Jean-Daniel Fekete <Jean-Daniel.Fekete@emn.fr>
+    Thomas Flynn <thomas.flynn@alcatel.com>
     Alex Funk <Alexander.Funk@nord-com.net>
     Matt Giger <mgiger@lunarsoft.com>
     Regis Houde <regie@robot.ireq.ca>
